# mtCellEdit

./: .gitignore  Makefile.am  VERSION  configure.ac  zconf
libmtcedui/: NEWS.txt
libmtcedui/src/: Makefile.am  cui_file.cpp  mtcedui.h
libmtcelledit/src/: .gitignore  Makefile.am
libmtkit/: NEWS.txt
libmtkit/src/: Makefile.am  mtkit.h  mtkit_recent.cpp
libmtpixy/src/: Makefile.am  px_file.cpp  px_file_bmp.cpp  px_file_gif.cpp  px_file_jpeg.cpp  px_file_png.cpp  px_palette.cpp
libmtpixyui/: NEWS.txt
libmtpixyui/src/: mtpixyui.h  pui_file.cpp
libmtqex/: NEWS.txt
libmtqex/src/: mtqex4.h  mtqex5.h  mtqex_file.cpp
mtcedcli/src/: Makefile.am  private.h  static.h
mtcelledit/: NEWS.txt
mtcelledit/handbook/en_GB/: chap_01.html  chap_05.html
mtcelledit/src/: be.h  static.h  tk_qt4_dialogs.cpp  tk_qt4_file.cpp  tk_qt4_graph.cpp  tk_qt4_sheet.cpp
mteleana/: NEWS.txt
mteleana/data/data/: README.txt
mteleana/data/data/eleana_results/: 1975.tsv  2016.tsv
mteleana/src/: be.h  be_polymap.cpp  static.h  tk_qt4_menu.cpp  tk_qt4_project.cpp
mtpixy/: NEWS.txt  mtConf.txt
mtpixy/handbook/en_GB/: chap_01.html
mtpixy/src/: be.h  qt45_canvas.cpp  qt45_file.cpp  qt45_options.cpp  qt45_palette.cpp  static.h
mtpixycli/src/: cli_backend.cpp  private.h
web/mtcelledit.sourceforge.net/: index.html
