AC_PREREQ([2.69])
AC_INIT([mtCellEdit], [DEV], [alt.mcarter@gmail.com])
AC_CONFIG_SRCDIR([libmtkit/src/mtkit_arg.cpp])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_MACRO_DIRS([m4])


LT_INIT
AC_PROG_YACC
AC_PROG_CXX
AC_PROG_YACC

AC_CONFIG_FILES([Makefile libmtkit/src/Makefile \
		 libmtcelledit/src/Makefile \
		 libmtpixy/src/Makefile \
		 libmtcedui/src/Makefile \
		 mtcedcli/src/Makefile])
AC_OUTPUT

