
lib_LTLIBRARIES = libmtkit.la
libmtkit_la_LDFLAGS = -version-info 1
libmtkit_la_SOURCES = \
		mtkit_arg.cpp		\
		mtkit_cli.cpp		\
		mtkit_cliitem.cpp		\
		mtkit_clitab.cpp		\
		mtkit_file.cppo		\
		mtkit_mtstring.cpp	\
		mtkit_prefs.cpp		\
		mtkit_recent.cpp		\
		mtkit_string.cp		\
		mtkit_time.cpp		\
		mtkit_tree.cpp		\
		mtkit_utf8.cpp		\
		mtkit_utree.cpp		\
		mtkit_zip.cpp		



HEADER		= mtkit.h
